--- a/static/admin.html
+++ b/static/admin.html
@@ -293,6 +293,115 @@
             font-size: 14px;
             opacity: 0.9;
         }
+
+        .violation-card {
+            background: white;
+            border: 2px solid #dc3545;
+            border-radius: 8px;
+            padding: 15px;
+            margin-bottom: 15px;
+            transition: all 0.3s;
+        }
+
+        .violation-card:hover {
+            box-shadow: 0 4px 12px rgba(220, 53, 69, 0.2);
+            transform: translateY(-2px);
+        }
+
+        .violation-card.reviewed {
+            border-color: #28a745;
+            opacity: 0.7;
+        }
+
+        .violation-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 12px;
+            padding-bottom: 10px;
+            border-bottom: 1px solid #f0f0f0;
+        }
+
+        .violation-user {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+
+        .violation-avatar {
+            width: 35px;
+            height: 35px;
+            border-radius: 50%;
+            background: #dc3545;
+            color: white;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-weight: bold;
+        }
+
+        .violation-date {
+            font-size: 12px;
+            color: #999;
+        }
+
+        .violation-message {
+            background: #f8f9fa;
+            padding: 12px;
+            border-radius: 6px;
+            margin-bottom: 10px;
+            font-size: 14px;
+            color: #333;
+        }
+
+        .violation-keywords {
+            margin-bottom: 10px;
+        }
+
+        .keyword-badge {
+            display: inline-block;
+            background: #dc3545;
+            color: white;
+            padding: 4px 10px;
+            border-radius: 12px;
+            font-size: 12px;
+            margin-right: 6px;
+        }
+
+        .violation-actions {
+            display: flex;
+            gap: 8px;
+        }
+
+        .violation-actions button {
+            flex: 1;
+            padding: 8px 16px;
+            font-size: 13px;
+        }
+
+        .btn-ban {
+            background: #dc3545;
+        }
+
+        .btn-ban:hover {
+            background: #c82333;
+        }
+
+        .btn-review {
+            background: #28a745;
+        }
+
+        .btn-review:hover {
+            background: #218838;
+        }
+
+        .reviewed-badge {
+            background: #28a745;
+            color: white;
+            padding: 4px 12px;
+            border-radius: 12px;
+            font-size: 12px;
+        }
     </style>
 </head>
 <body>
@@ -343,6 +452,33 @@
                 <button onclick="makeAdmin()">👑 Назначить админом</button>
             </div>
         </div>
+
+
+        <div class="section">
+            <h2>🚨 Нарушения DLP правил</h2>
+            <div class="stats" style="margin-bottom: 20px;">
+                <div class="stat-card" style="background: linear-gradient(135deg, #dc3545 0%, #c82333 100%);">
+                    <div class="stat-number" id="violationsCount">0</div>
+                    <div class="stat-label">Всего нарушений</div>
+                </div>
+                <div class="stat-card" style="background: linear-gradient(135deg, #ffc107 0%, #e0a800 100%);">
+                    <div class="stat-number" id="unreviewedCount">0</div>
+                    <div class="stat-label">Не проверено</div>
+                </div>
+            </div>
+
+            <div style="margin-bottom: 15px;">
+                <label style="display: flex; align-items: center; gap: 8px; cursor: pointer;">
+                    <input type="checkbox" id="showOnlyUnreviewed" onchange="loadViolations()" style="width: auto;">
+                    <span>Показать только непроверенные</span>
+                </label>
+            </div>
+
+            <div id="violationsList">
+                <div class="empty-state">Загрузка...</div>
+            </div>
+        </div>
+
 
         <div class="section">
             <h2>🧪 Тестирование сообщения</h2>
