--- a/static/admin.html
+++ b/static/admin.html
@@ -402,56 +402,197 @@
             border-radius: 12px;
             font-size: 12px;
         }
+
+        .file-card {
+            background: white;
+            border: 2px solid #17a2b8;
+            border-radius: 8px;
+            padding: 15px;
+            margin-bottom: 15px;
+            transition: all 0.3s;
+        }
+
+        .file-card:hover {
+            box-shadow: 0 4px 12px rgba(23, 162, 184, 0.2);
+            transform: translateY(-2px);
+        }
+
+        .file-card.approved {
+            border-color: #28a745;
+            opacity: 0.8;
+        }
+
+        .file-card.rejected {
+            border-color: #dc3545;
+            opacity: 0.7;
+        }
+
+        .file-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 12px;
+            padding-bottom: 10px;
+            border-bottom: 1px solid #f0f0f0;
+        }
+
+        .file-user {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+
+        .file-icon-big {
+            width: 50px;
+            height: 50px;
+            background: #17a2b8;
+            color: white;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 24px;
+            border-radius: 8px;
+        }
+
+        .file-details {
+            margin-bottom: 10px;
+        }
+
+        .file-filename {
+            font-weight: bold;
+            color: #333;
+            font-size: 15px;
+            margin-bottom: 5px;
+        }
+
+        .file-meta {
+            font-size: 12px;
+            color: #999;
+        }
+
+        .file-actions {
+            display: flex;
+            gap: 8px;
+        }
+
+        .file-actions button {
+            flex: 1;
+            padding: 8px 16px;
+            font-size: 13px;
+        }
+
+        .btn-approve {
+            background: #28a745;
+        }
+
+        .btn-approve:hover {
+            background: #218838;
+        }
+
+        .btn-reject {
+            background: #dc3545;
+        }
+
+        .btn-reject:hover {
+            background: #c82333;
+        }
+
+        .file-status-badge {
+            display: inline-block;
+            padding: 4px 12px;
+            border-radius: 12px;
+            font-size: 12px;
+        }
+
+        .file-status-badge.pending {
+            background: #fff3cd;
+            color: #856404;
+        }
+
+        .file-status-badge.approved {
+            background: #d4edda;
+            color: #155724;
+        }
+
+        .file-status-badge.rejected {
+            background: #f8d7da;
+            color: #721c24;
+        }
     </style>
 </head>
 <body>
-    <div class="admin-container">
-        <div class="header">
-            <h1>🛡️ DLP Admin Panel</h1>
-            <a href="/" class="back-link">← Вернуться в чат</a>
-        </div>
+<div class="admin-container">
+    <div class="header">
+        <h1>🛡️ DLP Admin Panel</h1>
+        <a href="/" class="back-link">← Вернуться в чат</a>
+    </div>
 
-        <div class="section">
-            <h2>📊 Статистика</h2>
-            <div class="stats">
-                <div class="stat-card">
-                    <div class="stat-number" id="keywordCount">0</div>
-                    <div class="stat-label">Запрещённых слов</div>
-                </div>
-                <div class="stat-card">
-                    <div class="stat-number" id="userCount">0</div>
-                    <div class="stat-label">Пользователей</div>
-                </div>
-                <div class="stat-card">
-                    <div class="stat-number" id="adminCount">0</div>
-                    <div class="stat-label">Администраторов</div>
-                </div>
+    <div class="section">
+        <h2>📊 Статистика</h2>
+        <div class="stats">
+            <div class="stat-card">
+                <div class="stat-number" id="keywordCount">0</div>
+                <div class="stat-label">Запрещённых слов</div>
+            </div>
+            <div class="stat-card">
+                <div class="stat-number" id="userCount">0</div>
+                <div class="stat-label">Пользователей</div>
+            </div>
+            <div class="stat-card">
+                <div class="stat-number" id="adminCount">0</div>
+                <div class="stat-label">Администраторов</div>
             </div>
         </div>
+    </div>
 
-        <div class="section">
-            <h2>🔑 Запрещённые слова</h2>
-            <div class="keyword-list" id="keywordList">
-                <div class="empty-state">Загрузка...</div>
+    <div class="section">
+        <h2>🔑 Запрещённые слова</h2>
+        <div class="keyword-list" id="keywordList">
+            <div class="empty-state">Загрузка...</div>
+        </div>
+
+        <div class="add-form">
+            <input type="text" id="newKeyword" placeholder="Введите новое запрещённое слово...">
+            <button onclick="addKeyword()">➕ Добавить</button>
+        </div>
+    </div>
+
+    <div class="section">
+        <h2>👥 Управление пользователями</h2>
+        <div id="usersList">
+            <div class="empty-state">Загрузка...</div>
+        </div>
+
+        <div class="add-form">
+            <input type="text" id="makeAdminUsername" placeholder="Введите username для назначения админом...">
+            <button onclick="makeAdmin()">👑 Назначить админом</button>
+        </div>
+    </div>
+
+    <div class="section">
+        <h2>📎 Модерация файлов</h2>
+        <div class="stats" style="margin-bottom: 20px;">
+            <div class="stat-card" style="background: linear-gradient(135deg, #17a2b8 0%, #138496 100%);">
+                <div class="stat-number" id="filesCount">0</div>
+                <div class="stat-label">Всего файлов</div>
             </div>
-
-            <div class="add-form">
-                <input type="text" id="newKeyword" placeholder="Введите новое запрещённое слово...">
-                <button onclick="addKeyword()">➕ Добавить</button>
+            <div class="stat-card" style="background: linear-gradient(135deg, #ffc107 0%, #e0a800 100%);">
+                <div class="stat-number" id="pendingFilesCount">0</div>
+                <div class="stat-label">На модерации</div>
             </div>
         </div>
 
-        <div class="section">
-            <h2>👥 Управление пользователями</h2>
-            <div id="usersList">
-                <div class="empty-state">Загрузка...</div>
-            </div>
-
-            <div class="add-form">
-                <input type="text" id="makeAdminUsername" placeholder="Введите username для назначения админом...">
-                <button onclick="makeAdmin()">👑 Назначить админом</button>
-            </div>
+        <div style="margin-bottom: 15px;">
+            <label style="display: flex; align-items: center; gap: 8px; cursor: pointer;">
+                <input type="checkbox" id="showOnlyPendingFiles" onchange="loadFiles()" style="width: auto;">
+                <span>Показать только на модерации</span>
+            </label>
         </div>
+
+        <div id="filesList">
+            <div class="empty-state">Загрузка...</div>
+        </div>
+    </div>
 
 
         <div class="section">
