--- a/static/index.html
+++ b/static/index.html
@@ -233,6 +233,100 @@
             transform: translateY(0);
         }
 
+        .attach-btn {
+            padding: 14px 18px;
+            background: #f8f9fa;
+            color: #667eea;
+            border: 2px solid #e9ecef;
+            border-radius: 25px;
+            cursor: pointer;
+            font-size: 20px;
+            transition: all 0.3s;
+        }
+
+        .attach-btn:hover {
+            background: #e9ecef;
+            border-color: #667eea;
+            transform: translateY(-2px);
+        }
+
+        .file-message {
+            background: #f8f9fa;
+            border: 2px solid #e9ecef;
+            padding: 12px 16px;
+            border-radius: 12px;
+            margin-bottom: 16px;
+            max-width: 70%;
+            animation: messageSlide 0.3s ease-out;
+        }
+
+        .file-message.sent {
+            margin-left: auto;
+            border-color: #667eea;
+        }
+
+        .file-message.received {
+            margin-right: auto;
+        }
+
+        .file-icon {
+            font-size: 32px;
+            margin-bottom: 8px;
+        }
+
+        .file-info {
+            font-size: 13px;
+            color: #666;
+        }
+
+        .file-name {
+            font-weight: bold;
+            color: #333;
+            margin-bottom: 4px;
+        }
+
+        .file-size {
+            color: #999;
+            font-size: 12px;
+        }
+
+        .file-status {
+            display: inline-block;
+            padding: 4px 10px;
+            border-radius: 12px;
+            font-size: 11px;
+            margin-top: 6px;
+        }
+
+        .file-status.pending {
+            background: #fff3cd;
+            color: #856404;
+        }
+
+        .file-status.approved {
+            background: #d4edda;
+            color: #155724;
+        }
+
+        .file-status.rejected {
+            background: #f8d7da;
+            color: #721c24;
+        }
+
+        .upload-progress {
+            margin-top: 8px;
+            background: #e9ecef;
+            border-radius: 10px;
+            height: 6px;
+            overflow: hidden;
+        }
+
+        .upload-progress-bar {
+            height: 100%;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            transition: width 0.3s;
+        }
+
         /* Typing indicator */
         .typing-indicator {
             display: none;
@@ -340,6 +434,11 @@
 
         <!-- Поле ввода -->
         <div class="input-area">
+            <input type="file" id="fileInput" accept=".exe,.doc,.docx" style="display: none;"
+                   onchange="handleFileSelect(event)">
+            <button onclick="document.getElementById('fileInput').click()" class="attach-btn" title="Прикрепить файл">
+                📎
+            </button>
             <input type="text" id="messageInput" placeholder="Введите сообщение...">
             <button onclick="sendMessage()" class="send-btn">📤 Отправить</button>
         </div>
