stable 4, add links update admin panel

--- a/static/index.html
+++ b/static/index.html
@@ -407,6 +407,17 @@
         #moderationModal label:hover {
             border-color: #667eea;
         }
+
+        @keyframes slideIn {
+            from {
+                transform: translateX(400px);
+                opacity: 0;
+            }
+            to {
+                transform: translateX(0);
+                opacity: 1;
+            }
+        }
     </style>
 </head>
 <body>
