--- a/static/admin.html
+++ b/static/admin.html
@@ -379,6 +379,69 @@
             font-size: 13px;
         }
 
+        .url-card {
+            background: white;
+            border: 2px solid #17a2b8;
+            border-radius: 8px;
+            padding: 15px;
+            margin-bottom: 15px;
+            transition: all 0.3s;
+        }
+
+        .url-card:hover {
+            box-shadow: 0 4px 12px rgba(23, 162, 184, 0.2);
+            transform: translateY(-2px);
+        }
+
+        .url-card.safe {
+            border-color: #28a745;
+        }
+
+        .url-card.malicious {
+            border-color: #dc3545;
+        }
+
+        .url-card.suspicious {
+            border-color: #ffc107;
+        }
+
+        .url-link {
+            background: #f8f9fa;
+            padding: 10px;
+            border-radius: 6px;
+            margin: 10px 0;
+            word-break: break-all;
+            font-family: monospace;
+            font-size: 13px;
+        }
+
+        .url-status-badge {
+            display: inline-block;
+            padding: 4px 12px;
+            border-radius: 12px;
+            font-size: 12px;
+            font-weight: bold;
+        }
+
+        .url-status-badge.pending {
+            background: #fff3cd;
+            color: #856404;
+        }
+
+        .url-status-badge.safe {
+            background: #d4edda;
+            color: #155724;
+        }
+
+        .url-status-badge.malicious {
+            background: #f8d7da;
+            color: #721c24;
+        }
+
+        .url-status-badge.suspicious {
+            background: #fff3cd;
+            color: #856404;
+        }
         .btn-ban {
             background: #dc3545;
         }
@@ -545,6 +608,29 @@
         </div>
     </div>
 
+
+    <div class="section">
+        <h2>📊 Статистика DLP системы</h2>
+        <div class="stats">
+            <div class="stat-card" style="background: linear-gradient(135deg, #28a745 0%, #20c997 100%);">
+                <div class="stat-number" id="totalMessagesCount">0</div>
+                <div class="stat-label">Всего сообщений</div>
+            </div>
+            <div class="stat-card" style="background: linear-gradient(135deg, #dc3545 0%, #c82333 100%);">
+                <div class="stat-number" id="blockedMessagesCount">0</div>
+                <div class="stat-label">Заблокировано</div>
+            </div>
+            <div class="stat-card" style="background: linear-gradient(135deg, #ffc107 0%, #e0a800 100%);">
+                <div class="stat-number" id="sensitiveDataCount">0</div>
+                <div class="stat-label">Конфиденциальных данных</div>
+            </div>
+            <div class="stat-card" style="background: linear-gradient(135deg, #17a2b8 0%, #138496 100%);">
+                <div class="stat-number" id="blockRatePercent">0%</div>
+                <div class="stat-label">% блокировок</div>
+            </div>
+        </div>
+    </div>
+
     <div class="section">
         <h2>🔑 Запрещённые слова</h2>
         <div class="keyword-list" id="keywordList">
@@ -594,74 +680,102 @@
         </div>
     </div>
 
-
-        <div class="section">
-            <h2>🚨 Нарушения DLP правил</h2>
-            <div class="stats" style="margin-bottom: 20px;">
-                <div class="stat-card" style="background: linear-gradient(135deg, #dc3545 0%, #c82333 100%);">
-                    <div class="stat-number" id="violationsCount">0</div>
-                    <div class="stat-label">Всего нарушений</div>
-                </div>
-                <div class="stat-card" style="background: linear-gradient(135deg, #ffc107 0%, #e0a800 100%);">
-                    <div class="stat-number" id="unreviewedCount">0</div>
-                    <div class="stat-label">Не проверено</div>
-                </div>
+    <div class="section">
+        <h2>🔗 Проверка ссылок</h2>
+        <div class="stats" style="margin-bottom: 20px;">
+            <div class="stat-card" style="background: linear-gradient(135deg, #17a2b8 0%, #138496 100%);">
+                <div class="stat-number" id="urlsCount">0</div>
+                <div class="stat-label">Всего ссылок</div>
             </div>
-
-            <div style="margin-bottom: 15px;">
-                <label style="display: flex; align-items: center; gap: 8px; cursor: pointer;">
-                    <input type="checkbox" id="showOnlyUnreviewed" onchange="loadViolations()" style="width: auto;">
-                    <span>Показать только непроверенные</span>
-                </label>
+            <div class="stat-card" style="background: linear-gradient(135deg, #ffc107 0%, #e0a800 100%);">
+                <div class="stat-number" id="pendingUrlsCount">0</div>
+                <div class="stat-label">На проверке</div>
             </div>
-
-            <div id="violationsList">
-                <div class="empty-state">Загрузка...</div>
+            <div class="stat-card" style="background: linear-gradient(135deg, #dc3545 0%, #c82333 100%);">
+                <div class="stat-number" id="maliciousUrlsCount">0</div>
+                <div class="stat-label">Опасных</div>
             </div>
         </div>
 
+        <div style="margin-bottom: 15px;">
+            <label style="display: flex; align-items: center; gap: 8px; cursor: pointer;">
+                <input type="checkbox" id="showOnlyPendingUrls" onchange="loadUrls()" style="width: auto;">
+                <span>Показать только на проверке</span>
+            </label>
+        </div>
 
-        <div class="section">
-            <h2>🧪 Тестирование сообщения</h2>
-            <div class="test-section">
-                <div class="add-form">
-                    <input type="text" id="testMessage" placeholder="Введите сообщение для проверки...">
-                    <button onclick="testMessage()">🔍 Проверить</button>
-                </div>
-                <div id="testResult"></div>
-            </div>
+        <div id="urlsList">
+            <div class="empty-state">Загрузка...</div>
         </div>
     </div>
 
-    <script>
-        // Проверка прав доступа при загрузке страницы
-        let currentUser = null;
+    <div class="section">
+        <h2>🚨 Нарушения DLP правил</h2>
+        <div class="stats" style="margin-bottom: 20px;">
+            <div class="stat-card" style="background: linear-gradient(135deg, #dc3545 0%, #c82333 100%);">
+                <div class="stat-number" id="violationsCount">0</div>
+                <div class="stat-label">Всего нарушений</div>
+            </div>
+            <div class="stat-card" style="background: linear-gradient(135deg, #ffc107 0%, #e0a800 100%);">
+                <div class="stat-number" id="unreviewedCount">0</div>
+                <div class="stat-label">Не проверено</div>
+            </div>
+        </div>
 
-        window.addEventListener('DOMContentLoaded', function () {
-            const userData = localStorage.getItem('user');
+        <div style="margin-bottom: 15px;">
+            <label style="display: flex; align-items: center; gap: 8px; cursor: pointer;">
+                <input type="checkbox" id="showOnlyUnreviewed" onchange="loadViolations()" style="width: auto;">
+                <span>Показать только непроверенные</span>
+            </label>
+        </div>
 
-            if (!userData) {
-                alert('❌ Необходима авторизация');
-                window.location.href = '/login';
-                return;
-            }
+        <div id="violationsList">
+            <div class="empty-state">Загрузка...</div>
+        </div>
+    </div>
 
-            currentUser = JSON.parse(userData);
 
-            if (!currentUser.is_admin) {
-                alert('❌ Доступ запрещён! Только для администраторов.');
-                window.location.href = '/';
-                return;
-            }
+    <div class="section">
+        <h2>🧪 Тестирование сообщения</h2>
+        <div class="test-section">
+            <div class="add-form">
+                <input type="text" id="testMessage" placeholder="Введите сообщение для проверки...">
+                <button onclick="testMessage()">🔍 Проверить</button>
+            </div>
+            <div id="testResult"></div>
+        </div>
+    </div>
+</div>
 
-            console.log('✅ Доступ разрешён для администратора:', currentUser.username);
+<script>
+    // Проверка прав доступа при загрузке страницы
+    let currentUser = null;
 
-            // Показываем статус в хедере
-            if (currentUser.is_super_admin) {
-                document.querySelector('.header h1').innerHTML = '🛡️ DLP Admin Panel <span style="font-size: 14px; background: #ffc107; color: #000; padding: 4px 12px; border-radius: 12px; margin-left: 10px;">SUPER ADMIN</span>';
-            }
-        });
-    </script>
-    <script src="/static/admin.js"></script>
+    window.addEventListener('DOMContentLoaded', function () {
+        const userData = localStorage.getItem('user');
+
+        if (!userData) {
+            alert('❌ Необходима авторизация');
+            window.location.href = '/login';
+            return;
+        }
+
+        currentUser = JSON.parse(userData);
+
+        if (!currentUser.is_admin) {
+            alert('❌ Доступ запрещён! Только для администраторов.');
+            window.location.href = '/';
+            return;
+        }
+
+        console.log('✅ Доступ разрешён для администратора:', currentUser.username);
+
+        // Показываем статус в хедере
+        if (currentUser.is_super_admin) {
+            document.querySelector('.header h1').innerHTML = '🛡️ DLP Admin Panel <span style="font-size: 14px; background: #ffc107; color: #000; padding: 4px 12px; border-radius: 12px; margin-left: 10px;">SUPER ADMIN</span>';
+        }
+    });
+</script>
+<script src="/static/admin.js"></script>
 </body>
 </html>
