stable 6. add stats in admin panel

--- a/static/profile.html
+++ b/static/profile.html
@@ -171,17 +171,17 @@
         <div class="success" id="successMsg"></div>
         <div class="error" id="errorMsg"></div>
 
-        <!-- Аватар -->
-        <div class="avatar-section">
-            <div class="avatar" id="avatarPreview">
-                <span id="avatarInitial">?</span>
-            </div>
-            <label class="upload-btn">
-                📷 Загрузить фото
-                <input type="file" accept="image/*" style="display: none;" onchange="handleAvatarUpload(event)">
-            </label>
-            <p style="font-size: 12px; color: #999; margin-top: 10px;">Пока недоступно (в разработке)</p>
-        </div>
+<!--        &lt;!&ndash; Аватар &ndash;&gt;-->
+<!--        <div class="avatar-section">-->
+<!--            <div class="avatar" id="avatarPreview">-->
+<!--                <span id="avatarInitial">?</span>-->
+<!--            </div>-->
+<!--            <label class="upload-btn">-->
+<!--                📷 Загрузить фото-->
+<!--                <input type="file" accept="image/*" style="display: none;" onchange="handleAvatarUpload(event)">-->
+<!--            </label>-->
+<!--            <p style="font-size: 12px; color: #999; margin-top: 10px;">Пока недоступно (в разработке)</p>-->
+<!--        </div>-->
 
         <!-- Форма профиля -->
         <form onsubmit="handleUpdateProfile(event)">
