--- a/static/admin.html
+++ b/static/admin.html
@@ -611,6 +611,8 @@
 
     <div class="section">
         <h2>📊 Статистика DLP системы</h2>
+
+        <!-- Основные метрики -->
         <div class="stats">
             <div class="stat-card" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);">
                 <div class="stat-number" id="totalMessagesCount">0</div>
@@ -628,6 +630,33 @@
                 <div class="stat-number" id="blockRatePercent">0%</div>
                 <div class="stat-label">% блокировок</div>
             </div>
+        </div>
+
+        <!-- График нарушений за неделю -->
+        <div style="background: white; padding: 20px; border-radius: 8px; margin: 20px 0; box-shadow: 0 2px 5px rgba(0,0,0,0.1);">
+            <h3 style="color: #667eea; margin-bottom: 15px;">📈 Нарушения за последние 7 дней</h3>
+            <canvas id="violationsChart" style="max-height: 250px;"></canvas>
+        </div>
+
+        <!-- Статистика файлов и URL -->
+        <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 20px; margin: 20px 0;">
+            <!-- Файлы -->
+            <div style="background: white; padding: 20px; border-radius: 8px; box-shadow: 0 2px 5px rgba(0,0,0,0.1);">
+                <h3 style="color: #667eea; margin-bottom: 15px;">📎 Статистика файлов</h3>
+                <canvas id="filesChart" style="max-height: 200px;"></canvas>
+            </div>
+
+            <!-- URL -->
+            <div style="background: white; padding: 20px; border-radius: 8px; box-shadow: 0 2px 5px rgba(0,0,0,0.1);">
+                <h3 style="color: #667eea; margin-bottom: 15px;">🔗 Статистика ссылок</h3>
+                <canvas id="urlsChart" style="max-height: 200px;"></canvas>
+            </div>
+        </div>
+
+        <!-- Топ нарушителей -->
+        <div style="background: white; padding: 20px; border-radius: 8px; margin: 20px 0; box-shadow: 0 2px 5px rgba(0,0,0,0.1);">
+            <h3 style="color: #667eea; margin-bottom: 15px;">👥 Топ-5 нарушителей</h3>
+            <div id="topViolatorsList"></div>
         </div>
 
         <!-- Дополнительная детальная статистика -->
@@ -653,6 +682,9 @@
             </div>
         </div>
     </div>
+
+    <!-- Подключаем Chart.js -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
 
     <div class="section">
         <h2>🔑 Запрещённые слова</h2>
